--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       SIES Graduate School of Technology, Nerul, Navi Mumbai
                     </h4>
+                    <a href="/register/" class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
+                      Speaker Registration
+                    </a>
                      <br>
                    <!-- <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now
@@ -196,11 +199,14 @@
                     <br>
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       SIES Graduate School of Technology, Nerul, Navi Mumbai
-                    </h4> 
+                    </h4>
+                    <a href="/register/" class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
+                      Speaker Registration
+                    </a>
                      <br>
                    <!-- <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Register Now -->
-                    </a>
+                      Register Now
+                    </a> -->
                     
                   </div>
                   <!-- //.col-md-10 -->
@@ -246,12 +252,11 @@
                     <br>
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       SIES Graduate School of Technology, Nerul, Navi Mumbai
-                    </h4> -->
-                    
-                    <!--
-                    <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
-                      Register Now -->
-                    </a> 
+                    </h4>
+                    <a href="/register/" class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
+                      Speaker Registration
+                    </a>
+                     <br>
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
