core team update

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -134,13 +134,10 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
           <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-sideline-base-color">
-            Speaker Committee
+            Core Team
           </h3>
           <p class="margin-5 no-margin-rl text-gray-dark-2">
-            Responsible for finding voices that have ideas which can ignite the
-            people. Works in close association with the speakers to help construct
-            a talk which will not only inspire and motivate people but also spark
-            conversations and open doors for new perspectives.
+            As every computer has a CPU, every TedX team has a Core Committee. Core Team is the brain and heart of the whole TedX. This team makes sure that every team works together in harmony and deliver their best. For a successful event, the CORE team is most responsible.
           </p>
         </div>
 
@@ -149,13 +146,13 @@
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <img src="../res/images/team/nabeel.jpg" alt=""/>
+                <img src="../res/images/team/Core Team/Anirudh Belwadi.jpg" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Hassan<br>Nabeel
+              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-medium text-uppercase">
+                Anirudh<br>Belwadi
               </span>
             </div>
             <!-- //.bg-gray-light -->
@@ -169,13 +166,13 @@
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <img src="../res/images/team/sohaib.jpg" alt=""/>
+                <img src="../res/images/team/Core Team/Harsh Sanjay Agrawal.jpg" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Mohammad<br>Sohaib
+              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-medium text-uppercase">
+                Harsh<br>Agrawal
               </span>
             </div>
             <!-- //.bg-gray-light -->
@@ -189,13 +186,13 @@
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <img src="../res/images/team/muneeba.jpg" alt=""/>
+                <img src="../res/images/team/Core Team/Srinivas Somal.jpeg" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Muneeba<br>Rizvi
+              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-medium text-uppercase">
+                Srinivas<br>Somal
               </span>
             </div>
             <!-- //.bg-gray-light -->
@@ -209,13 +206,13 @@
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <img src="../res/images/team/adeebul.jpg" alt=""/>
+                <img src="../res/images/team/Core Team/Praveena Viswarajan.jpeg" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Adeebul<br>Hafiz
+              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-medium text-uppercase">
+                Praveena<br>Viswarajan
               </span>
             </div>
             <!-- //.bg-gray-light -->
@@ -229,13 +226,13 @@
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <img src="../res/images/team/areesha.jpg" alt=""/>
+                <img src="../res/images/team/Core Team/Varun Sreedhar.jpg" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Areesha<br>Fakhri
+              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-medium text-uppercase">
+                Varun<br>Sreedhar
               </span>
             </div>
             <!-- //.bg-gray-light -->
@@ -244,87 +241,7 @@
         </div>
         <!-- //Member Box End -->
 
-        <!-- Member Box Start -->
-        <div class="member-box col-xs-6 col-sm-4 col-md-3">
-          <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
-              <div class="img-wrapper">
-                <img src="../res/images/team/najeeb.jpg" alt=""/>
-              </div>
-            </div>
-            <!-- //.position-relative -->
-            <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Najeeb<br>Khan
-              </span>
-            </div>
-            <!-- //.bg-gray-light -->
-          </div>
-          <!-- //.overflow-hidden -->
-        </div>
-        <!-- //Member Box End -->
-
-        <!-- Member Box Start -->
-        <div class="member-box col-xs-6 col-sm-4 col-md-3">
-          <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
-              <div class="img-wrapper">
-                <img src="../res/images/team/ghulam.jpg" alt=""/>
-              </div>
-            </div>
-            <!-- //.position-relative -->
-            <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Ghulam<br>Hussain
-              </span>
-            </div>
-            <!-- //.bg-gray-light -->
-          </div>
-          <!-- //.overflow-hidden -->
-        </div>
-        <!-- //Member Box End -->
-
-        <!-- Member Box Start -->
-        <div class="member-box col-xs-6 col-sm-4 col-md-3">
-          <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
-              <div class="img-wrapper">
-                <img src="../res/images/team/shaiq.jpg" alt=""/>
-              </div>
-            </div>
-            <!-- //.position-relative -->
-            <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Shaiq<br>Ali
-              </span>
-            </div>
-            <!-- //.bg-gray-light -->
-          </div>
-          <!-- //.overflow-hidden -->
-        </div>
-        <!-- //Member Box End -->
-
-        <!-- Member Box Start -->
-        <div class="member-box col-xs-6 col-sm-4 col-md-3">
-          <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
-              <div class="img-wrapper">
-                <img src="../res/images/team/kaynat.jpg" alt=""/>
-              </div>
-            </div>
-            <!-- //.position-relative -->
-            <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
-              <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                Kaynat<br>Muzaffar
-              </span>
-            </div>
-            <!-- //.bg-gray-light -->
-          </div>
-          <!-- //.overflow-hidden -->
-        </div>
-        <!-- //Member Box End -->
-      </div>
-      <!-- //.row -->
+        
 
       <div class="row padding-8 no-padding-rl no-padding-bottom">
         <div class="col-md-8 col-md-offset-2 text-center">
