--- a/our-team/index.html
+++ b/our-team/index.html
@@ -543,7 +543,7 @@
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative">
               <div class="img-wrapper">
-                <img src="../res/images/team/Media team/_MG_9028-01.jpg" alt=""/>
+                <img src="../res/images/team/Media team/Ajish Nair.jpg" alt=""/>
               </div>
             </div>
             <!-- //.position-relative -->
