--- a/our-team/index.html
+++ b/our-team/index.html
@@ -624,7 +624,7 @@
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-medium text-uppercase">
-                Nika<br>Manmohan
+                Nija<br>Manmohan
               </span>
             </div>
             <!-- //.bg-gray-light -->
