--- a/our-team/index.html
+++ b/our-team/index.html
@@ -287,7 +287,7 @@
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-medium text-uppercase">
-                Vikranth<br>Deshmukh
+                Vikrant<br>Deshmukh
               </span>
             </div>
             <!-- //.bg-gray-light -->
