minor text change

--- a/about/index.html
+++ b/about/index.html
@@ -151,7 +151,7 @@
           </h2>
           <br>
           <p class="text-justify-center">
-            Voice of a beautiful mind combined with the willingness to inspire. Is'nt that all we need to inspire people to look at the world differently. Hence TEDx SIESGST provides a platform for people with innovative thoughts who could inspire masses to tackle hurdles from various walks of their respective lives.<br><br>
+            Voice of a beautiful mind combined with the willingness to inspire. Isn't that all we need to inspire people to look at the world differently. Hence TEDx SIESGST provides a platform for people with innovative thoughts who could inspire masses to tackle hurdles from various walks of their respective lives.<br><br>
 
             Keeping our theme <b>“SomethinK Different”</b>  in mind we aim to throw light on the fact that the world is going through a global change. We humans are extremely comfortable with the concept of homeostasis but often forget that this very concept is overridden by the phrase <b>“Change is the only constant”.</b> Our current scenario itself is a conclusive proof that the world is undergoing a paradigm shift and we have to adapt to it. Internet has become not a luxury but a compulsion in today’s world. The future projects a complete change in the lifestyle of people and how virtual presence is becoming the new norm . Absence of social and emotional contact has made it a challenge to stabilize our mental health.
            <br><br> 
