--- a/404.html
+++ b/404.html
@@ -86,8 +86,8 @@
           </button>
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
-            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxJMI"/>
-            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="TEDxJMI"/>
+            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxSIESGST"/>
+            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="TEDxSIESGST"/>
           </a>
         </div>
         <!-- //.navbar-header -->
