--- a/404.html
+++ b/404.html
@@ -184,7 +184,7 @@
   <!-- Section - Parallax banner start -->
   <section id="home-bg-parallax" class="height-50 no-padding overflow-hidden width-100">
     <!-- BG Parallax -->
-    <div class="bg-parallax bg-overlay-black-5 width-100"></div>
+    <div class="bg-parallax bg-overlay-black-3 width-100" style="-webkit-background-size: 100% 100% !important; background-size: 100% 100% !important;"></div>
 
     <div class="display-table height-100 position-absolute position-top position-left width-100">
       <div class="display-table-cell vertical-align-middle">
