--- a/register/index.html
+++ b/register/index.html
@@ -198,7 +198,7 @@
             </span>
             <div class="row margin-2 no-margin-rl no-margin-bottom">
               <p class="font-family-alt sm-text-large text-extra-large text-gray-dark-2">
-                Before registering, make sure you read and comply to the following rules
+                Before registering, make sure you read and comply to the rules
                 and guidelines regarding the event:
               </p>
             <span class="display-block margin-2 no-margin-bottom no-margin-rl text-medium text-gray-dark-2">
