--- a/Privacy/privacy.html
+++ b/Privacy/privacy.html
@@ -129,7 +129,7 @@
 
           <br>
           <div class="text-gray-dark-2">
-            <p>Dear User, we value the trust you place in us. That is why we insist upon the highest standards for secure transactions and customer information privacy. The following statement details our information gathering and dissemination practices. This Privacy Policy governs the manner in which TEDxSIESGST collects, uses, maintains and discloses information collected from users (each, a "User") of the www.tedxsiesgst.com website (“Website”). This privacy policy applies to the Website and all products and services offered by TEDxSIESGST.</p>
+            <p>Dear User, we value the trust you place in us. That is why we insist upon the highest standards for secure transactions and customer information privacy. The following statement details our information gathering and dissemination practices. This Privacy Policy governs the manner in which TEDxSIESGST collects, uses, maintains and discloses information collected from users (each, a "User") of the www.tedxsiesgst.live website (“Website”). This privacy policy applies to the Website and all products and services offered by TEDxSIESGST.</p>
             <strong>Note:</strong> Please read this Privacy Policy periodically, before and during your use of the Website. Your continued use of the Website is taken as your consent to the terms of this Privacy Policy. Once this privacy policy is created or modified, we will add a link to it on our home page or as a minimum, on the first significant page after entering our website. Our Privacy Policy link includes the word 'Privacy' and can be easily found on the page specified above.
             <br>
             <br>
