Linkedin added in footer.

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
               <li><a href="https://www.facebook.com/tedxsiesgst/"><i class="fa fa-facebook"></i></a></li>
               <li><a href="https://twitter.com/tedxsiesgst"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://www.instagram.com/tedxsiesgst/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/tedxsiesgst"><i class="fa fa-linkedin"></i></a></li>
               <br>
               <p class="disclaimer xs-text-center">
                 
