--- a/404.html
+++ b/404.html
@@ -243,6 +243,7 @@
               <li><a href="https://facebook.com/tedxsiesgst"> <i class="fa fa-facebook"></i></a></li>
               <li><a href="https://twitter.com/tedxsiesgst"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://instagram.com/tedxsiesgst"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/tedxsiesgst"><i class="fa fa-linkedin"></i></a></li>
             </ul>
             <br>
             <p class="disclaimer xs-text-center">
