--- a/about/index.html
+++ b/about/index.html
@@ -230,6 +230,7 @@
               <li><a href="https://www.facebook.com/tedxsiesgst/"><i class="fa fa-facebook"></i></a></li>
               <li><a href="https://twitter.com/TEDxSIESGST"><i class="fa fa-twitter"></i></a></li>
               <li><a href="https://www.instagram.com/tedxSiesgst/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/tedxsiesgst"><i class="fa fa-linkedin"></i></a></li>
             </ul>
             <br>
               <p class="disclaimer xs-text-center">
