--- a/404.html
+++ b/404.html
@@ -264,9 +264,17 @@
 
   <!-- Scroll to top -->
   <a href="#page-top" class="page-scroll scroll-to-top"><i class="fa fa-angle-up"></i></a>
+  
 
+  <script type="text/javascript">
+    if(window.location.pathname.split('/').length>2)
+    {
+      window.location.replace("https://tedxsiesgst.live/404");
+    }
+  </script>
 
   <!-- jQuery -->
+
   <script src="res/js/jquery.min.js"></script>
 
   <!-- Bootstrap -->
