--- a/speakers/index.html
+++ b/speakers/index.html
@@ -137,7 +137,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
@@ -157,7 +157,7 @@
                     </span>
                     <br>
                     <span class="display-block font-weight-700 letter-spacing-1 text-medium">
-                     <!-- Designation : Film-maker &amp; Journalist --> 
+                     <!-- Designation : Film-maker &amp; Journalist -->
                     </span>
                   </div>
                   <!-- //.display-table-cell -->
@@ -176,7 +176,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
@@ -215,7 +215,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
@@ -254,7 +254,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
@@ -294,7 +294,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
@@ -333,7 +333,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
@@ -372,7 +372,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
@@ -411,7 +411,7 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="/res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/soon.png" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
