--- a/speakers/index.html
+++ b/speakers/index.html
@@ -185,7 +185,8 @@
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
-                <!-- Enter Speaker Name --> 
+                <!-- Enter Speaker Name -->
+                Coming Soon!
               </span>
             </div>
             <!-- //.bg-black -->
@@ -224,7 +225,8 @@
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
-              <!-- Enter Speaker Name --> 
+              <!-- Enter Speaker Name -->
+              Coming Soon!
               </span>
             </div>
             <!-- //.bg-black -->
@@ -263,7 +265,8 @@
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
-                <!-- Enter Speaker Name --> 
+                <!-- Enter Speaker Name -->
+                Coming Soon!
               </span>
             </div>
             <!-- //.bg-black -->
@@ -303,7 +306,8 @@
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
-                <!-- Enter Speaker Name --> 
+                <!-- Enter Speaker Name -->
+                Coming Soon!
               </span>
             </div>
             <!-- //.bg-black -->
@@ -342,7 +346,8 @@
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
-                <!-- Enter Speaker Name --> 
+                <!-- Enter Speaker Name -->
+                Coming Soon!
               </span>
             </div>
             <!-- //.bg-black -->
@@ -381,7 +386,8 @@
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
-                <!-- Enter Speaker Name --> 
+                <!-- Enter Speaker Name -->
+                Coming Soon!
               </span>
             </div>
             <!-- //.bg-black -->
@@ -420,7 +426,8 @@
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
-                <!-- Enter Speaker Name --> 
+                <!-- Enter Speaker Name -->
+                Coming Soon!
               </span>
             </div>
             <!-- //.bg-black -->
