--- a/speakers/index.html
+++ b/speakers/index.html
@@ -179,14 +179,14 @@
         <div class="features-box speaker-box col-sm-6 col-md-4">
           <div class="overflow-hidden position-relative width-100">
             <div class="img-wrapper">
-              <img src="../res/images/speakers/soon.png" alt=""/>
+              <img src="../res/images/speakers/aishwariya.jpg" alt=""/>
             </div>
             <!-- //.img-wrapper -->
 
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
                 <!-- Enter Speaker Name -->
-                Coming Soon!
+                Aishwariya Ayushman
               </span>
             </div>
             <!-- //.bg-black -->
@@ -196,11 +196,13 @@
                 <div class="display-table height-100 width-100">
                   <div class="display-table-cell no-padding-tb padding-11 vertical-align-middle text-uppercase text-white">
                     <span class="display-block font-family-alt letter-spacing-1 title-small">
-                      <!-- Enter Speaker Name --> 
+                      <!-- Enter Speaker Name -->
+                      Aishwariya Ayushman
                     </span>
                     <br>
                     <span class="display-block font-weight-700 letter-spacing-1 text-medium">
-                      <!-- Designation : Film-maker &amp; Journalist --> 
+                      <!-- Designation : Film-maker &amp; Journalist -->
+                      Drag Queen & Human Rights Lawyer
                     </span>
                   </div>
                   <!-- //.display-table-cell -->
