--- a/speakers/index.html
+++ b/speakers/index.html
@@ -186,7 +186,7 @@
             <div class="bg-black no-padding-rl padding-6 position-relative text-center">
               <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-white text-medium text-uppercase">
                 <!-- Enter Speaker Name -->
-                Aishwariya Ayushman
+                Aishwarya Ayushman
               </span>
             </div>
             <!-- //.bg-black -->
@@ -197,7 +197,7 @@
                   <div class="display-table-cell no-padding-tb padding-11 vertical-align-middle text-uppercase text-white">
                     <span class="display-block font-family-alt letter-spacing-1 title-small">
                       <!-- Enter Speaker Name -->
-                      Aishwariya Ayushman
+                      Aishwarya Ayushman
                     </span>
                     <br>
                     <span class="display-block font-weight-700 letter-spacing-1 text-medium">
